--- a/index.html
+++ b/index.html
@@ -195,11 +195,7 @@
               <h3>Lost & Theft Mode</h3>
               <p>Mark your vehicle or belongings as stolen instantly</p>
             </div>
-            <div class="feature-card">
-              <div class="feature-icon">🆘</div>
-              <h3>AI Crash Detection</h3>
-              <p>Automatic SOS triggered by AI crash detection technology</p>
-            </div>
+          
             <div class="feature-card">
               <div class="feature-icon">🔐</div>
               <h3>Blockchain Vault</h3>
@@ -278,7 +274,7 @@
         </div>
       </section>
 
-      <section id="impact" class="impact">
+    <!--  <section id="impact" class="impact">
         <div class="container">
           <h2 class="section-title">Social Impact</h2>
           <div class="impact-grid">
@@ -336,7 +332,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section id="packages" class="packages">
         <div class="wrap">
