--- a/index.html
+++ b/index.html
@@ -346,10 +346,11 @@
               </div>
 
               <div class="features" aria-hidden="false">
-                <div class="feature">QR + NFC Tag</div>
-                <div class="feature">5 Emergency Contacts</div>
-                <div class="feature">GPS Location Sharing</div>
-                <div class="feature">Cloud Dashboard</div>
+               <div class="feature">QR Code Access</div>
+    <div class="feature">One-Tap SOS</div>
+    <div class="feature">5 Emergency Contacts</div>
+    <div class="feature">GPS Location Sharing</div>
+    <div class="feature">Insurance Claims (₹3L - ₹5L)</div>
               </div>
 
               <div class="cta">
@@ -365,11 +366,12 @@
               </div>
 
               <div class="features">
-                <div class="feature">Everything in Basic</div>
-                <div class="feature">AI Crash Detection</div>
-                <div class="feature">Health ID Storage</div>
-                <div class="feature">Blockchain Vault</div>
-                <div class="feature">Priority Support</div>
+               <div class="feature">Everything in Basic</div>
+    <div class="feature">Cloud Dashboard</div>
+    <div class="feature">Blood Donors</div>
+    <div class="feature">Health ID Storage</div>
+    <div class="feature">Blockchain Vault</div>
+    <div class="feature">Insurance Claims (₹8L - ₹10L)</div>
               </div>
 
               <div class="cta">
